criação do "sua biblioteca" + footer

--- a/index.html
+++ b/index.html
@@ -22,22 +22,20 @@
                     <img src="assets\logo-spotify.png" alt="Logo Spotify">
                 </a>
             </div>
-            <div>
-                <ul>
-                    <li>
-                        <a href="">
-                            <span class="fa fa-home"></span> 
-                            <span>Início</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span class="fa fa-search"></span>
-                            <span>Buscar</span>
-                        </a>
-                    </li>  
-                </ul>
-            </div>
+            <ul>
+                <li>
+                    <a href="">
+                        <span class="fa fa-home"></span> 
+                        <span class="text">Início</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span class="fa fa-search"></span>
+                        <span class="text">Buscar</span>
+                    </a>
+                </li>  
+            </ul>
         </nav>
 
         <!-- Sua Biblioteca -->
@@ -49,7 +47,47 @@
                 </button>
                 <span class="fa fa-plus"></span>
             </div>
+
+            <section class="section-playlist">
+                <div class="section-playlist_content">
+                    <span class="text title">Crie sua primeira playlist</span>
+                    <span class="text subtitle">É fácil, vamos te ajudar</span>
+
+                    <button class="section-playlist_button">
+                        <span>Criar playlist</span>
+                    </button>
+                </div>
+            </section>
+
+            <div class="cookies">
+                <a href="">Cookies</a>
+            </div>
+
+            <div class="languages">
+                <button class="languages-button">
+                    <span class="fa fa-globe"></span>
+                    <span>Português-Brasil</span>
+                </button>
+            </div>
         </div>
+
     </div>
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer_text">
+            <p class="text title">TESTAR O PREMIUM DE GRAÇA</p>
+            <p class="text subtitle">
+                Inscreva-se para curtir músicas ilimitadas e podcasts só com alguns anúncios. 
+                Não precisa de cartão de cédito.
+            </p>
+        </div>
+        <div class="footer_button">
+            <button type="button">
+                Inscreva-se grátis
+            </button>
+        </div>
+
+        </footer>
 </body>
 </html>
