--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="src\styles\reset.css">
+    <link rel="stylesheet"  href="src\styles\vars.css">
+    <link rel="stylesheet" href="src\styles\style.css">   
+    <link rel="stylesheet" href="src\styles\main-content.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
         integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"
@@ -19,7 +21,7 @@
         <nav class="sidebar_navigation">
             <div class="logo">
                 <a href="">
-                    <img src="assets\logo-spotify.png" alt="Logo Spotify">
+                    <img src="src\styles\assets\logo-spotify.png" alt="Logo Spotify">
                 </a>
             </div>
             <ul>
@@ -73,6 +75,46 @@
 
     </div>
 
+    <!--Principal-->
+    <main>
+        <div class="main-container">
+            <nav class="header-navigation">
+                <div class="navigation">
+                    <button class="arrow-left">
+                        <img src="src\styles\assets\small-left.png" alt="Seta esquerda">
+                    </button>
+                    <button class="arrow-right">
+                        <img src="src\styles\assets\small-right.png" alt="Seta direita">
+                    </button>
+                </div>   
+
+                <div class="header-search">
+                    <img src="src\styles\assets\search.png" alt="">
+                    <input type="text" name="" id="search-input" 
+                    maxlength="800" placeholder="O que você quer ouvir?"/>
+                </div>
+                <div class="header-login">
+                    <button class="subscribe">Inscreva-se</button>
+                    <button class="login">Entrar</button>
+                </div>
+            </nav>
+        
+            <div class="playlist-section">
+                <div id="result-playlist">
+                    <div class="playlist">
+                        <h1 id="title">Boas vindas</h1>
+                        <h2 class="subtitle">Navegar por todas as seções</h2>
+                    </div>
+                <!--
+                    <div class="section">
+
+                    </div>
+                -->   
+                </div>
+            </div>
+        </div>    
+    </main>
+
     <!-- Footer -->
     <footer>
         <div class="footer_text">
@@ -87,7 +129,6 @@
                 Inscreva-se grátis
             </button>
         </div>
-
         </footer>
 </body>
 </html>
