--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
                         <h1 id="title">Boas vindas</h1>
                         <h2 class="subtitle">Navegar por todas as seções</h2>
                     </div>
-                </div>
 
                 <!-- LIST ITEM 1 -->
                 <div class="offer-scroll_container">
@@ -236,27 +235,29 @@
                 </div>
                 </div>
 
+                <div id="result-artist" class="hidden">
+                    <div class="grid-container">
+                        <div class="artist-card" id="">
+                            <div class="card-img">
+                                <img id="artist-img" class="artist-img" />
+                                <div class="play">
+                                    <span class="fa fa-solid fa-play"></span>
+                                </div>
+                            </div>
+                            <div class="card-text">
+                                <a title="Foo Fighters" class="vst" href=""></a>
+                                <span class="artist-name" id="artist-name"></span>
+                                <span class="artist-categorie">Artista</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>  
         
-        <div id="result-artist" class="hidden">
-            <div class="grid-container">
-                <div class="artist-card" id="">
-                    <div class="card.img">
-                        <img id="artist-img" class="artist-img">
-                        <div class="play">
-                            <span class="fa fa-solid fa-play"></span>
-                        </div>
-                    </div>
-                    <div class="card-text">
-                        <a title="Foo Fighters" class="vst" href=""></a>
-                        <span class="artist-name" id="artist-name"></span>
-                        <span class="artist-categorie">Artista</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
     </main>
 
     <!-- Footer -->
